--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -271,7 +271,9 @@
     <dimen name="panel_start_time_margin_top">12dp</dimen>
     <dimen name="panel_start_time_margin_left">8dp</dimen>
     <dimen name="panel_start_time_margin_text_size">13dp</dimen>
-    <dimen name="panel_clip_margin_left">7dp</dimen>
+    <dimen name="tv_program_item_panel_margin_right">8dp</dimen>
+    <dimen name="tv_program_item_panel_content_title_text_size">13dp</dimen>
+    <dimen name="tv_program_item_panel_content_detail_text_size">11dp</dimen>
     <dimen name="panel_clip_margin_right">7dp</dimen>
     <dimen name="panel_clip_margin_top">8dp</dimen>
     <dimen name="panel_content_des_margin_top">12dp</dimen>
