コンテンツ詳細　サムネイル画像のサイズの修正
Change-Id: I1915c744e818a642749f78479f600c058326863e

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/contents_info_thumbnail_text"
-                android:scaleType="fitXY" />
+                android:scaleType="fitCenter" />
 
             <ImageView
                 android:id="@+id/dtv_contents_detail_main_layout_thumbnail_shadow"
