DREM-1646: 番組表 - クリップ固定dp指定,見逃し有無条件改善
Change-Id: I9efa9306bd3da7764a76f65636bd870168ac8c5a

--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
@@ -25,8 +25,8 @@
 
 		<ImageView
 			android:id="@+id/tv_program_item_panel_clip_iv"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_width="@dimen/tv_program_item_panel_clip_width"
+			android:layout_height="@dimen/tv_program_item_panel_clip_width"
 			android:layout_below="@id/tv_program_item_panel_clip_tv"
 			android:layout_marginTop="@dimen/panel_clip_margin_top"
 			android:clickable="true"
