--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -9,7 +9,15 @@
         android:id="@+id/home_main_layout_progress_bar_Layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
