--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -30,8 +30,7 @@
                 <FrameLayout
                     android:id="@+id/header_watch_by_tv"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@drawable/remote_watch_by_tv_bottom_corner">
+                    android:layout_height="80dp">
 
                     <RelativeLayout
                         android:id="@+id/bottom_view_ll"
