DREM-1653 ヘッダ部とステータスバーの赤色が少し異なっている
ステータスバーの色とヘッダーの色を同色になるように修正しました。
Styleのパラメータ変更により実現していますが、Android4.4では未対応のため別手法にて修正しています(各Activityへの変更はこれによるものです)。
Styleによる修正の方が綺麗に変更できるため、OSバージョンにて処理分けをしました。

初回起動画面は仮の画面ですが、独自のヘッダーが表示されており紛らわしかったため独自ヘッダーは削除しました。
ビデオランキング画面は後ほど他の修正と一緒にCommitします。

Change-Id: Ib86f04652362364f7da228d72725b8839cd11bcc

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -1,48 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/base_rl"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/baseStatusBarLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/base_ll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/header_background_color_red">
-        <include
-            android:id="@+id/base_title"
-            layout="@layout/header_layout" />
-    </LinearLayout>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/base_motion_detection_rl"
+        android:id="@+id/base_rl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <RelativeLayout
-        android:id="@+id/base_remote_controller_rl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:visibility="invisible">
+        android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/base_remote_controller"
-            layout="@layout/remote_control_main_layout" />
-    </RelativeLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/base_ll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/header_background_color_red">
+            <include
+                android:id="@+id/base_title"
+                layout="@layout/header_layout" />
+        </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/base_progress_rl"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:visibility="gone">
-
-        <ProgressBar
-            android:id="@+id/base_progress"
-            style="?android:attr/progressBarStyle"
+        <RelativeLayout
+            android:id="@+id/base_motion_detection_rl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <RelativeLayout
+            android:id="@+id/base_remote_controller_rl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:visibility="invisible">
+
+            <include
+                android:id="@+id/base_remote_controller"
+                layout="@layout/remote_control_main_layout" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/base_progress_rl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/base_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
