DREM-1519 （Sprint11レビューフィードバック）未ペアリングでも「TVで視聴する」が表示される
①要らないソースの削除とフォーマット
②直値部分の修正

Change-Id: Id453a1fe4d125de5d299b96af0f390b88a53b752

--- a/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_bottom_corner_d_anime.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_bottom_corner_d_anime.xml
@@ -4,9 +4,11 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DD5e30" />
-    <corners android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"
-/>
-    <stroke android:width="0dp" android:color="#DD5e30" />
+    <solid android:color="@color/remote_watch_by_tv_bottom_corners_d_anime" />
+    <corners
+        android:topLeftRadius="@dimen/remote_watch_by_tv_bottom_corners"
+        android:topRightRadius="@dimen/remote_watch_by_tv_bottom_corners" />
+    <stroke
+        android:width="@dimen/remote_watch_by_tv_bottom_width"
+        android:color="@color/remote_watch_by_tv_bottom_corners_d_anime" />
 </shape>
