--- a/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_bottom_corner_dtv.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/remote_watch_by_tv_bottom_corner_dtv.xml
@@ -4,9 +4,11 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D3052C" />
-    <corners android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"
-/>
-    <stroke android:width="0dp" android:color="#D3052C" />
+    <solid android:color="@color/remote_watch_by_tv_bottom_corners_dtv" />
+    <corners
+        android:topLeftRadius="@dimen/remote_watch_by_tv_bottom_corners"
+        android:topRightRadius="@dimen/remote_watch_by_tv_bottom_corners" />
+    <stroke
+        android:width="@dimen/remote_watch_by_tv_bottom_width"
+        android:color="@color/remote_watch_by_tv_bottom_corners_dtv" />
 </shape>
