--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
@@ -10,16 +10,15 @@
 
 	<RelativeLayout
 		android:id="@+id/tv_program_item_panel_clip_rv"
-		android:layout_width="wrap_content"
+		android:layout_width="@dimen/tv_program_item_panel_clip_side"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="@dimen/panel_clip_margin_right"
-		android:layout_marginStart="@dimen/panel_start_time_margin_left"
 		android:layout_marginTop="@dimen/panel_start_time_margin_top">
 
 		<TextView
 			android:id="@+id/tv_program_item_panel_clip_tv"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_centerHorizontal="true"
 			android:textColor="@color/tv_program_list_panel_start_time_text_color"
 			android:textSize="@dimen/panel_start_time_margin_text_size"/>
 
@@ -28,6 +27,7 @@
 			android:layout_width="@dimen/tv_program_item_panel_clip_width"
 			android:layout_height="@dimen/tv_program_item_panel_clip_width"
 			android:layout_below="@id/tv_program_item_panel_clip_tv"
+			android:layout_centerHorizontal="true"
 			android:layout_marginTop="@dimen/panel_clip_margin_top"
 			android:clickable="true"
 			android:contentDescription="@null"
