アプリ名称変更、チャンネルリスト取得処理修正（disp_typeで無理やり紐づけていた件）の修正 + ヘッダレイアウト微修正(番組表の下矢印がおかしな位置に飛んでいたのを修正)
Change-Id: I01d47bd3b2d26588852220a2a5e77640b552aa50

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -35,12 +35,15 @@
             android:visibility="invisible" />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="@dimen/main_header_title_text_width"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true">
     <TextView
         android:id="@+id/header_layout_text"
         style="@style/autoscroll"
-        android:layout_width="@dimen/main_header_title_text_width"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
         android:maxEms="9"
         android:ellipsize="end"
         android:maxLines="1"
@@ -49,15 +52,6 @@
         android:textColor="#FFFFFF"
         android:textSize="@dimen/main_header_title_text_size"
         android:textStyle="bold" />
-    
-    <ImageView
-        android:id="@+id/header_layout_title_image"
-        android:layout_width="@dimen/main_header_title_image_width"
-        android:layout_height="match_parent"
-        android:src="@mipmap/header_material_title_logo_drt"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
-
     <!-- 番組表カレンダー矢印 -->
     <ImageView
         android:id="@+id/tv_program_list_main_layout_calendar_arrow"
@@ -67,4 +61,15 @@
         android:layout_toEndOf="@id/header_layout_text"
         android:background="@mipmap/icon_normal_arrow_bottom"
         android:visibility="gone"/>
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/header_layout_title_image"
+        android:layout_width="@dimen/main_header_title_image_width"
+        android:layout_height="match_parent"
+        android:src="@mipmap/header_material_title_logo_drt"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
+
 </RelativeLayout>
