ヘッダタイトルのレイアウト微修正
Change-Id: I5d1548349a6cf1f989ef661391e855977e2aec61

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -38,7 +38,8 @@
     <RelativeLayout
         android:layout_width="@dimen/main_header_title_text_width"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:gravity="center">
     <TextView
         android:id="@+id/header_layout_text"
         style="@style/autoscroll"
