--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:background="@color/home_item_contents_background_color"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/home_contents_thumbnail_right_padding"
         android:scaleType="fitCenter"
         android:contentDescription="@null"/>
 
