--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/rental_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/rental_list_main_layout.xml
@@ -8,6 +8,21 @@
     android:layout_height="match_parent"
     android:background="@color/rental_background_color">
 
+    <RelativeLayout
+        android:id="@+id/rental_list_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/rental_list"
         android:layout_width="match_parent"
