--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -154,29 +154,12 @@
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/watch_listen_result_content_title" />
 
-            <LinearLayout
+            <com.nttdocomo.android.tvterminalapp.view.RatingBarLayout
                 android:id="@+id/item_common_result_content_rating"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/watch_listen_result_content_rating_margin_top"
-                android:orientation="horizontal">
-
-                <RatingBar
-                    android:id="@+id/item_common_result_content_rating_star"
-                    style="@style/roomRatingBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" />
-
-                <TextView
-                    android:id="@+id/item_common_result_content_rating_num"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/list_item_rank_num_start_margin"
-                    android:textColor="@color/white_text"
-                    android:textSize="@dimen/watch_listen_text_size" />
-            </LinearLayout>
+                android:gravity="center_vertical"/>
         </LinearLayout>
 
         <TextView
