--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -19,12 +19,26 @@
             android:paddingEnd="@dimen/contents_tab_side_margin"
             android:paddingStart="@dimen/contents_tab_top_margin">
 
-            <ImageView
-                android:id="@+id/dtv_contents_detail_fragment_service_provider"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/contents_tab_side_margin"
-                android:contentDescription="@null" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/dtv_contents_detail_fragment_service_provider"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/contents_detail_service_icon_label_height"
+                    android:contentDescription="@null" />
+
+                <ImageView
+                    android:id="@+id/dtv_contents_detail_fragment_service_provider_dtv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/contents_detail_service_icon_label_height"
+                    android:contentDescription="@null"
+                    android:layout_marginStart="@dimen/contents_detail_service_icon_label_margin"
+                    android:visibility="gone"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/dtv_contents_detail_fragment_contents_title"
@@ -67,6 +81,12 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/contents_detail_schedule_detail_schedule_info"
                         android:textSize="@dimen/contents_detail_contents_text_size" />
+
+                    <com.nttdocomo.android.tvterminalapp.view.RatingBarLayout
+                        android:id="@+id/dtv_contents_detail_fragment_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"/>
                 </LinearLayout>
 
                 <RelativeLayout
@@ -83,7 +103,8 @@
                         android:layout_toStartOf="@+id/contents_detail_clip_button"
                         android:scaleType="fitXY"
                         android:src="@drawable/recording_reservation_rec_icon_selector"
-                        android:visibility="invisible" />
+                        android:visibility="invisible"
+                        android:contentDescription="@null"/>
 
                     <ImageView
                         android:id="@+id/contents_detail_clip_button"
@@ -94,7 +115,8 @@
                         android:clickable="true"
                         android:gravity="center_vertical"
                         android:scaleType="fitXY"
-                        android:src="@mipmap/icon_circle_opacity_clip" />
+                        android:src="@mipmap/icon_circle_opacity_clip"
+                        android:contentDescription="@null"/>
                 </RelativeLayout>
             </RelativeLayout>
 
