--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/select_channel_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/select_channel_main_layout.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/my_channel_edit_main_root_bg">
 
 	<ListView
-		android:id="@+id/my_channel_edit_main_layout_edit_lv"
+		android:id="@+id/select_channel_main_layout_edit_lv"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 </RelativeLayout>
