コンテンツ詳細画面ロジック修正
Change-Id: I6c5fdd7629be12ab1cae611642856e02c0a5f8d5

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -103,7 +103,7 @@
                         android:layout_toStartOf="@+id/contents_detail_clip_button"
                         android:scaleType="fitXY"
                         android:src="@drawable/recording_reservation_rec_icon_selector"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:contentDescription="@null"/>
 
                     <ImageView
