--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -37,6 +37,8 @@
     <dimen name="clip_button_size">30dp</dimen>
     <dimen name="clip_common_margin">8dp</dimen>
 
+    <dimen name="search_load_more_margin">10dp</dimen>
+
     <!--Global Menu-->
     <dimen name="global_menu_list_height">44dp</dimen>
     <dimen name="global_menu_list_right_arrow_icon_size">30dp</dimen>
