--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -44,6 +44,7 @@
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
+        android:textStyle="bold"
         android:text="@string/str_stb_d_account_registration_help"
         android:textColor="@color/stb_select_black_color" />
 
@@ -58,6 +59,7 @@
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
+        android:textStyle="bold"
         android:text="@string/str_stb_input_activation_code"
         android:textColor="@color/stb_select_black_color" />
 
@@ -72,6 +74,7 @@
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
+        android:textStyle="bold"
         android:text="@string/str_stb_again_pairing"
         android:textColor="@color/list_item_background" />
 
@@ -86,6 +89,7 @@
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
+        android:textStyle="bold"
         android:text="@string/str_stb_login_other_account"
         android:textColor="@color/stb_select_black_color"
         android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
