--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="@dimen/main_setting_list_height"
-    android:background="@drawable/color_black">
+    android:background="@color/setting_list_background_color">
     <TextView
         android:id="@+id/setting_main_text"
         android:layout_width="wrap_content"
