--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -53,7 +53,8 @@
                     android:layout_height="@dimen/contents_detail_player_logo_height"
                     android:layout_marginStart="@dimen/contents_detail_player_logo_start_margin"
                     android:layout_marginTop="@dimen/contents_detail_player_logo_top_margin"
-                    android:background="@color/contents_logo_background_default_color"/>
+                    android:background="@color/contents_logo_background_default_color"
+                    android:contentDescription="@null"/>
             </RelativeLayout>
 
             <ImageView
@@ -62,13 +63,6 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/contents_info_thumbnail_text"
                 android:scaleType="fitCenter" />
-
-            <ImageView
-                android:id="@+id/dtv_contents_detail_main_layout_thumbnail_shadow"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@mipmap/thumb_material_mask_overlay_gradation"
-                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/dtv_contents_detail_main_layout_thumbnail_btn"
