DREM-1819 番組表画面で、ひかりからdTVチャンネルタブに切り替え時に、時刻ラインは下げてから戻る
Change-Id: Ic43027ba58fe704796a942325d1c5fb1d1d6d200

--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
@@ -38,7 +38,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tv_program_list_main_layout_channel_rv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/tv_program_channel_height"
             android:layout_toEndOf="@id/tv_program_list_main_layout_curtime_iv"
             android:scrollbars="none" />
 
