--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
@@ -33,8 +33,8 @@
 		android:id="@+id/channel_list_item_line"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/channel_list_divider_height"
+		android:layout_marginStart="@dimen/channel_list_thumbnail_margin_start_top"
 		android:layout_alignParentBottom="true"
-		android:layout_alignStart="@id/channel_list_item_title_tv"
 		android:background="@color/list_view_divider" />
 
 </RelativeLayout>
