DREM-1731 [不具合修正]横スクリーンPlayerバグ(android 8.xの場合だけ)
Change-Id: I0057470f2b2a8cd783eeb93d8358671f3d45afbd

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -32,7 +32,8 @@
                     android:id="@+id/dtv_contents_detail_main_layout_player_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"/>
 
                 <TextView
                     android:id="@+id/tv_player_main_layout_video_ctrl_player_title"
