--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_clip_list_item_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_clip_list_item_content.xml
@@ -1,40 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-				android:background="#222222">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/rental_background_color">
 
-	<TextView
-		android:id="@+id/clip_list_tv_searched_result"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="6dp"
-		android:layout_marginBottom="6dp"
-		android:layout_marginLeft="20dp"
-		android:text="検索結果:0件"
-		android:textColor="@android:color/white"
-		android:visibility="gone"
-		android:textSize="13dp"/>
-
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="1dp"
-		android:layout_below="@+id/clip_list_tv_searched_result"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
-		android:background="@color/keyword_search_hint"/>
-
-	<ListView
-		android:id="@+id/clip_list_lv_searched_result"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_below="@id/clip_list_tv_searched_result"
-		android:divider="@drawable/list_item_divider"
-		android:dividerHeight="1dp">
-	</ListView>
+    <ListView
+        android:id="@+id/clip_list_lv_searched_result"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@drawable/list_item_divider"
+        android:dividerHeight="1dp">
+    </ListView>
 
 </RelativeLayout>
