DREM-1809 【初回リリース】【Android】キーワード検索画面の検索バーのレイアウトがiOSと一致しない ＋検索レイアウトを修正＋xhdpi以外に格納されたアイコンリソースを移動＋提供物でない自作アイコンがあったので削除し差替え
Change-Id: I43c4332ed3861a47c597547ff6c1cce553be9890

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -49,7 +49,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_centerVertical="true"
                             android:contentDescription="@null"
-                            android:src="@mipmap/ic_remote_tv_play" />
+                            android:src="@mipmap/tv" />
 
                         <TextView
                             android:id="@+id/watch_by_tv"
